Update AdminPanel.js,App.css,index.html and script.js

--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
         <!-- Image -->
         <div class="col-lg-6">
           <div class="shadow-lg rounded-3 overflow-hidden">
-            <img src="assets/department/department_photo.jpg" alt="Department Photo" class="img-fluid w-100">
+            <img src="assets/department/lab photo.jpg" alt="Department Photo" class="img-fluid w-100">
           </div>
           <br>
           <div class="shadow-lg rounded-3 overflow-hidden">
-            <img src="assets/department/Department_photo1.jpg" alt="Department Photo" class="img-fluid w-100">
+            <img src="assets/department/labphoto1.jpg" alt="Department Photo" class="img-fluid w-100">
           </div>
         </div>
         
@@ -248,7 +248,7 @@
           <div class="col-md-4">
             <h5>Contact Information</h5>
             <p>Rayat College, Kopargaon</p>
-            <p>Email: info@rayatcollege.edu</p>
+            <p>Email: info@BCSdepartment.edu</p>
             <p>Phone: +91 1234567890</p>
           </div>
           <div class="col-md-4">
